; ModuleID = '/home/carl/AnghaBench/kphp-kdb/queue/extr_queue-data.c_get_watchcat_s.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/queue/extr_queue-data.c_get_watchcat_s.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@get_watchcat_s.buf = internal global [100 x i8] zeroinitializer, align 16

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @get_watchcat_s(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %2, align 8
  store i8* getelementptr inbounds ([100 x i8], [100 x i8]* @get_watchcat_s.buf, i64 0, i64 0), i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = getelementptr inbounds i8, i8* %5, i32 1
  store i8* %6, i8** %3, align 8
  store i8 119, i8* %5, align 1
  %7 = load i8*, i8** %3, align 8
  %8 = getelementptr inbounds i8, i8* %7, i32 1
  store i8* %8, i8** %3, align 8
  store i8 95, i8* %7, align 1
  br label %9

9:                                                ; preds = %52, %1
  %10 = load i64, i64* %2, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %53

12:                                               ; preds = %9
  %13 = load i64, i64* %2, align 8
  %14 = urem i64 %13, 62
  %15 = trunc i64 %14 to i32
  store i32 %15, i32* %4, align 4
  %16 = load i64, i64* %2, align 8
  %17 = udiv i64 %16, 62
  store i64 %17, i64* %2, align 8
  %18 = load i32, i32* %4, align 4
  %19 = icmp slt i32 %18, 26
  br i1 %19, label %20, label %26

20:                                               ; preds = %12
  %21 = load i32, i32* %4, align 4
  %22 = add nsw i32 %21, 65
  %23 = trunc i32 %22 to i8
  %24 = load i8*, i8** %3, align 8
  %25 = getelementptr inbounds i8, i8* %24, i32 1
  store i8* %25, i8** %3, align 8
  store i8 %23, i8* %24, align 1
  br label %52

26:                                               ; preds = %12
  %27 = load i32, i32* %4, align 4
  %28 = sub nsw i32 %27, 26
  store i32 %28, i32* %4, align 4
  %29 = load i32, i32* %4, align 4
  %30 = icmp slt i32 %29, 26
  br i1 %30, label %31, label %37

31:                                               ; preds = %26
  %32 = load i32, i32* %4, align 4
  %33 = add nsw i32 %32, 97
  %34 = trunc i32 %33 to i8
  %35 = load i8*, i8** %3, align 8
  %36 = getelementptr inbounds i8, i8* %35, i32 1
  store i8* %36, i8** %3, align 8
  store i8 %34, i8* %35, align 1
  br label %51

37:                                               ; preds = %26
  %38 = load i32, i32* %4, align 4
  %39 = sub nsw i32 %38, 26
  store i32 %39, i32* %4, align 4
  %40 = load i32, i32* %4, align 4
  %41 = icmp slt i32 %40, 10
  br i1 %41, label %42, label %48

42:                                               ; preds = %37
  %43 = load i32, i32* %4, align 4
  %44 = add nsw i32 %43, 48
  %45 = trunc i32 %44 to i8
  %46 = load i8*, i8** %3, align 8
  %47 = getelementptr inbounds i8, i8* %46, i32 1
  store i8* %47, i8** %3, align 8
  store i8 %45, i8* %46, align 1
  br label %50

48:                                               ; preds = %37
  %49 = call i32 @assert(i32 0)
  br label %50

50:                                               ; preds = %48, %42
  br label %51

51:                                               ; preds = %50, %31
  br label %52

52:                                               ; preds = %51, %20
  br label %9

53:                                               ; preds = %9
  %54 = load i8*, i8** %3, align 8
  %55 = getelementptr inbounds i8, i8* %54, i32 1
  store i8* %55, i8** %3, align 8
  store i8 0, i8* %54, align 1
  ret i8* getelementptr inbounds ([100 x i8], [100 x i8]* @get_watchcat_s.buf, i64 0, i64 0)
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
